--- a/arch/arm64/boot/dts/freescale/imx8mn-var-som-symphony.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mn-var-som-symphony.dts
@@ -5,7 +5,7 @@
  */
 
 /dts-v1/;
-
+ 
 #include <dt-bindings/usb/pd.h>
 #include "imx8mn-var-som.dtsi"
 
@@ -64,13 +64,79 @@
 	leds {
 		compatible = "gpio-leds";
 		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_leds>;
 
-		heartbeat {
-			label = "Heartbeat";
-			gpios = <&pca9534 0 GPIO_ACTIVE_HIGH>;
-			linux,default-trigger = "heartbeat";
+		led1 {
+			label = "led1";
+			gpios = <&gpio5 11 GPIO_ACTIVE_HIGH>;
+			linux,default-trigger = "default-on";
 		};
+
+		led2 {
+			label = "led2";
+			gpios = <&gpio5 10 GPIO_ACTIVE_HIGH>;
+			linux,default-trigger = "default-on";
+		};
+
 	};
+
+	batt_management {
+		compatible = "gpio_batt_management";
+		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_batt_management>;
+
+		CHG_ACOK { 
+			label = "CHG_ACOK";
+			gpios = <&gpio5 0>; // dont know if I need 'GPIO_ACTIVE_SOMETHING' for an input
+			input;
+			// pin is low when external +5V is connected. this is how we know when to charge
+		};
+		
+		CHG_EN { 
+			label = "CHG_EN";
+			gpios = <&gpio4 30 GPIO_ACTIVE_HIGH>; 
+			linux,default-trigger = "default-on";
+			//need to be able to toggle LOW when we want to charge battery (controlled by matts code)
+		};
+	
+		CHG_STATE { 
+			label = "CHG_STATE";
+			gpios = <&gpio5 29>; // dont know if I need 'GPIO_ACTIVE_SOMETHING' for an input
+			input;
+			// pin is low when battery is charging and below 90% capacity. We need to read this pin in order to tell the system when to stop charging.
+		};	
+
+		Batt_Mon_EN {
+			label = "Batt_Mon_EN";
+			gpios = <&gpio4 31 GPIO_ACTIVE_HIGH>;
+			linux,default-trigger = "default-on";
+			// this pin needs to be driven high to enable the battery fuel gauge IC
+		};
+	
+	strain_gauge {
+		compatible = "gpio_strain_gauge"; // these pins are not gpios though does this naming convention matter?
+		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_strain_gauge>;
+	
+		HDOUT {
+			label = "HDOUT";
+			// dont know how to configure as a data channel controlled by the HX711 library
+		};
+	
+		HCLKIN {
+			label = "HCLKIN";
+			// dont know how to configure as a clock channel controlled by the HX711 library
+		};
+
+	buzzer {
+		compatible = "gpio_buzzer";
+		status = "okay";
+		pinctrl-names = "defualt";
+		pinctrl-0 = <&pinctrl_buzzerpwm>;
+		};
 
 	reg_usdhc2_vmmc: regulator-usdhc2 {
 		compatible = "regulator-fixed";
@@ -93,18 +159,91 @@
 	};
 };
 
+&gpio5 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_vw_lvds>;
+
+	vw-lvds-backlight {
+		gpio-hog;
+		gpios = <24 GPIO_ACTIVE_HIGH>;
+		output-high;
+		// this is the shutdown pin for the boost on the +26V backlight line
+	};
+
+	vw-lvds-reset {
+		gpio-hog;
+		gpios = <27 GPIO_ACTIVE_HIGH>;
+		output-high;
+		// this is the reset pin for the lvds display
+	};
+
+};
+
+&gpio1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_vw_lvds_stndby>
+	
+	vw-lvds-stby {
+		gpio-hog;
+		gpios = <8 GPIO_ACTIVE_HIGH>;
+		output-high;
+		// this is the stndby pin on the lvds display 
+	};
+
 &iomuxc {
+	
+	// ADDED STRAIN GAUGE (HX711 IC) PINS
+	pinctrl_strain_gauge: strain_gauge {
+		fsl,pins = <
+			MX8MN_IOMUXC_ECSPI2_SS0_GPIO5_IO13          // do not know what pad mux id to configure for data out pin for the HX711 IC 
+			MX8MN_IOMUXC_SPDIF_TX_GPIO5_IO3             // do not know what pad mux id to configure for clock in pin for the HX711 IC
+			>;
+	};
+
+	// ADDED BATTERY MANAGEMENT PINS
+	pinctrl_batt_management: batt_management {
+		fsl,pins = <
+			MX8MN_IOMUXC_SAI3_TXC_GPIO5_IO0           0x16 // do not know what this needs to be for an input
+			MX8MN_IOMUXC_SAI3_RXD_GPIO4_IO30 		0x16 // this is an output so same as below??
+			MX8MN_IOMUXC_UART4_TXD_GPIO5_IO29 		0x16 // do not know what this needs to be for an input
+			MX8MN_IOMUXC_SAI3_TXFS_GPIO4_IO31 		0x16 // this is an output so same as below??
+			>;
+	};
+
+	// ADDED LED TESTING PINS
+	pinctrl_leds: leds {
+		fsl,pins = <
+			MX8MN_IOMUXC_ECSPI2_MOSI_GPIO5_IO11       0x16 /*do not know it is 0x16 or not*/
+			MX8MN_IOMUXC_ECSPI2_SCLK_GPIO5_IO10		0x16 /*do not know it is 0x16 or not*/
+                >;
+	};
 
 	pinctrl_touch: goodixtouch{
 		fsl,pins = <
-			MX8MN_IOMUXC_UART3_RXD_GPIO5_IO26         	0x16 /*do not know it is 0x16 or not*/
+			MX8MN_IOMUXC_UART3_RXD_GPIO5_IO26        	0x16 /*do not know it is 0x16 or not*/
 			MX8MN_IOMUXC_UART2_TXD_GPIO5_IO25		0x16 /*do not know it is 0x16 or not*/
                 >;
 	};
 
-	pinctrl_captouch: captouchgrp {
+	// ADDED LVDS STANDBY PIN
+	pinctrl_vw_lvds_stndby: vw_stndby {
+		fsl,pins = <	
+			MX8MN_IOMUXC_GPIO1_IO08_GPIO1_IO8         0x16 // this is an output
+			>;
+	};
+	
+	// ADDED LVDS BACKLIGHT AND RESET PINS	
+	pinctrl_vw_lvds: vw_lvds {
 		fsl,pins = <
-			MX8MN_IOMUXC_SPDIF_RX_GPIO5_IO4			0xc0
+			MX8MN_IOMUXC_UART2_RXD_GPIO5_IO24		0x16 /* backlight */
+			MX8MN_IOMUXC_UART3_TXD_GPIO5_IO27		0x16 /* reset */
+		>;
+	};
+
+	// ADDED BUZZER PWM SIGNAL
+	pinctrl_buzzerpwm: buzzer {
+		fsl,pins = <
+			MX8MN_IOMUXC_SPDIF_RX_PWM2_OUT		0X06 // what is register value for pwm?
 		>;
 	};
 
@@ -148,8 +287,8 @@
 			MX8MN_IOMUXC_GPIO1_IO07_GPIO1_IO7		0x16
 		>;
 	};
-
-	pinctrl_pwm1: pwm1grp {
+	
+	pwm1grp {
 		fsl,pins = <
 			MX8MN_IOMUXC_SPDIF_EXT_CLK_PWM1_OUT		0x06
 		>;
@@ -315,7 +454,7 @@
 };
 
 &i2c3 {
-	/* Capacitive touch controller */
+	/* Capacitive touch controller 
 	ft5x06_ts: ft5x06_ts@38 {
 		status = "disabled";
 		compatible = "edt,edt-ft5206";
@@ -329,7 +468,7 @@
 		touchscreen-inverted-x;
 		touchscreen-inverted-y;
 		wakeup-source;
-	};
+	}; */
 
 	/* DS1337 RTC module */
 	rtc@68 {
@@ -348,9 +487,9 @@
 	sda-gpios = <&gpio5 21 GPIO_ACTIVE_HIGH>;
 	status = "okay";
 	
-	gt911@5d {
+	gt911@14 {
 			compatible = "goodix,gt911";
-			reg = <0x5d>; /* I2C address of GT911. This can also be xBB or x28 or x29 */
+			reg = <0x14>; /* I2C address of GT911. This can also be xBB or x28 or x29 */
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_touch>; /* This controls the backlight which we are not using (pwmB) */
 			interrupt-parent = <&gpio5>; 
@@ -359,8 +498,6 @@
 			reset-gpios = <&gpio5 25 GPIO_ACTIVE_HIGH>; /* This pin should be active when bluetooth function is disabled */ 
                        touchscreen-size-x = <800>; /* pixel size width */
 		        touchscreen-size-y = <480>; /* pixel size height */
-		        touchscreen-inverted-x; /* dont know what this means */
-		        touchscreen-inverted-y; /* This pin should be active when bluetooth function is disabled */ 
 		        status = "okay";
 			wakeup-source;
 	};
